@@ -53,7 +53,7 @@
       	font-style: normal;
       }
     </style>
-    <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/application-eaf860cca2.css">
+    <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/application-bebd96117e.css">
     {% if config.extra.palette %}
       <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/palettes-05ab2406df.css">
     {% endif %}
